--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -39,8 +39,15 @@ main{
   pointer-events: none;
 }
 
-.fade {
-  display: none;
+.contenedor-footer{
+  background-color: #001b35;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 8vh;
 }
 
 
